# ESP_32_Learn

ESP_LCD/: .cproject  .project  sdkconfig
ESP_LCD/components/BSP/: CMakeLists.txt
ESP_LCD/components/BSP/BUZZER/: buzzer.c  buzzer.h
ESP_LCD/components/BSP/ECHO/: echo.c  echo.h
ESP_LCD/components/BSP/TM1637/: tm1637.c
ESP_LCD/main/: CMakeLists.txt  i2c_task.c  i2c_task.h  main.c
ESP_LCD/task/: CMakeLists.txt
